src/main/java/com/arakelian/elastic/search/parser/QueryStringParser.java
// Generated from com/arakelian/elastic/search/parser/QueryStringParser.g4 by ANTLR 4.7.1

// @formatter:off
package com.arakelian.elastic.search.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QueryStringParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACK=3, RBRACK=4, COLON=5, PLUS=6, MINUS=7, STAR=8, 
		QMARK=9, LCURLY=10, RCURLY=11, CARAT=12, TILDE=13, DQUOTE=14, SQUOTE=15, 
		TO=16, AND=17, OR=18, NOT=19, WS=20, NUMBER=21, DATE_TOKEN=22, TERM_NORMAL=23, 
		TERM_TRUNCATED=24, PHRASE=25, PHRASE_ANYTHING=26, OPERATOR=27, ATOM=28, 
		MODIFIER=29, TMODIFIER=30, CLAUSE=31, FIELD=32, FUZZY=33, BOOST=34, QNORMAL=35, 
		QPHRASE=36, QPHRASETRUNC=37, QTRUNCATED=38, QRANGEIN=39, QRANGEEX=40, 
		QANYTHING=41, QDATE=42;
	public static final int
		RULE_mainQ = 0, RULE_clauseDefault = 1, RULE_clauseOr = 2, RULE_clauseAnd = 3, 
		RULE_clauseNot = 4, RULE_clauseBasic = 5, RULE_atom = 6, RULE_field = 7, 
		RULE_value = 8, RULE_anything = 9, RULE_two_sided_range_term = 10, RULE_range_term = 11, 
		RULE_range_value = 12, RULE_multi_value = 13, RULE_normal = 14, RULE_truncated = 15, 
		RULE_quoted_truncated = 16, RULE_quoted = 17, RULE_modifier = 18, RULE_term_modifier = 19, 
		RULE_boost = 20, RULE_fuzzy = 21, RULE_not_ = 22, RULE_and_ = 23, RULE_or_ = 24, 
		RULE_date = 25, RULE_sep = 26;
	public static final String[] ruleNames = {
		"mainQ", "clauseDefault", "clauseOr", "clauseAnd", "clauseNot", "clauseBasic", 
		"atom", "field", "value", "anything", "two_sided_range_term", "range_term", 
		"range_value", "multi_value", "normal", "truncated", "quoted_truncated", 
		"quoted", "modifier", "term_modifier", "boost", "fuzzy", "not_", "and_", 
		"or_", "date", "sep"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'['", "']'", "':'", "'+'", null, "'*'", null, "'{'", 
		"'}'", null, null, "'\"'", "'''", "'TO'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "PLUS", "MINUS", 
		"STAR", "QMARK", "LCURLY", "RCURLY", "CARAT", "TILDE", "DQUOTE", "SQUOTE", 
		"TO", "AND", "OR", "NOT", "WS", "NUMBER", "DATE_TOKEN", "TERM_NORMAL", 
		"TERM_TRUNCATED", "PHRASE", "PHRASE_ANYTHING", "OPERATOR", "ATOM", "MODIFIER", 
		"TMODIFIER", "CLAUSE", "FIELD", "FUZZY", "BOOST", "QNORMAL", "QPHRASE", 
		"QPHRASETRUNC", "QTRUNCATED", "QRANGEIN", "QRANGEEX", "QANYTHING", "QDATE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QueryStringParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QueryStringParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainQContext extends ParserRuleContext {
		public ClauseDefaultContext clause;
		public TerminalNode EOF() { return getToken(QueryStringParser.EOF, 0); }
		public ClauseDefaultContext clauseDefault() {
			return getRuleContext(ClauseDefaultContext.class,0);
		}
		public List<SepContext> sep() {
			return getRuleContexts(SepContext.class);
		}
		public SepContext sep(int i) {
			return getRuleContext(SepContext.class,i);
		}
		public MainQContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainQ; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterMainQ(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitMainQ(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitMainQ(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainQContext mainQ() throws RecognitionException {
		MainQContext _localctx = new MainQContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mainQ);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(54);
				sep();
				}
				break;
			}
			setState(57);
			((MainQContext)_localctx).clause = clauseDefault();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(58);
				sep();
				}
			}

			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseDefaultContext extends ParserRuleContext {
		public List<ClauseOrContext> clauseOr() {
			return getRuleContexts(ClauseOrContext.class);
		}
		public ClauseOrContext clauseOr(int i) {
			return getRuleContext(ClauseOrContext.class,i);
		}
		public List<SepContext> sep() {
			return getRuleContexts(SepContext.class);
		}
		public SepContext sep(int i) {
			return getRuleContext(SepContext.class,i);
		}
		public ClauseDefaultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clauseDefault; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterClauseDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitClauseDefault(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitClauseDefault(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseDefaultContext clauseDefault() throws RecognitionException {
		ClauseDefaultContext _localctx = new ClauseDefaultContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clauseDefault);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			clauseOr();
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(64);
						sep();
						}
						break;
					}
					setState(67);
					clauseOr();
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseOrContext extends ParserRuleContext {
		public List<ClauseAndContext> clauseAnd() {
			return getRuleContexts(ClauseAndContext.class);
		}
		public ClauseAndContext clauseAnd(int i) {
			return getRuleContext(ClauseAndContext.class,i);
		}
		public List<Or_Context> or_() {
			return getRuleContexts(Or_Context.class);
		}
		public Or_Context or_(int i) {
			return getRuleContext(Or_Context.class,i);
		}
		public ClauseOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clauseOr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterClauseOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitClauseOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitClauseOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseOrContext clauseOr() throws RecognitionException {
		ClauseOrContext _localctx = new ClauseOrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_clauseOr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			clauseAnd();
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(74);
					or_();
					setState(75);
					clauseAnd();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseAndContext extends ParserRuleContext {
		public List<ClauseNotContext> clauseNot() {
			return getRuleContexts(ClauseNotContext.class);
		}
		public ClauseNotContext clauseNot(int i) {
			return getRuleContext(ClauseNotContext.class,i);
		}
		public List<And_Context> and_() {
			return getRuleContexts(And_Context.class);
		}
		public And_Context and_(int i) {
			return getRuleContext(And_Context.class,i);
		}
		public ClauseAndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clauseAnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterClauseAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitClauseAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitClauseAnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseAndContext clauseAnd() throws RecognitionException {
		ClauseAndContext _localctx = new ClauseAndContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_clauseAnd);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			clauseNot();
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(83);
					and_();
					setState(84);
					clauseNot();
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseNotContext extends ParserRuleContext {
		public List<ClauseBasicContext> clauseBasic() {
			return getRuleContexts(ClauseBasicContext.class);
		}
		public ClauseBasicContext clauseBasic(int i) {
			return getRuleContext(ClauseBasicContext.class,i);
		}
		public List<Not_Context> not_() {
			return getRuleContexts(Not_Context.class);
		}
		public Not_Context not_(int i) {
			return getRuleContext(Not_Context.class,i);
		}
		public ClauseNotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clauseNot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterClauseNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitClauseNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitClauseNot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseNotContext clauseNot() throws RecognitionException {
		ClauseNotContext _localctx = new ClauseNotContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_clauseNot);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			clauseBasic();
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92);
					not_();
					setState(93);
					clauseBasic();
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseBasicContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(QueryStringParser.LPAREN, 0); }
		public ClauseDefaultContext clauseDefault() {
			return getRuleContext(ClauseDefaultContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(QueryStringParser.RPAREN, 0); }
		public List<SepContext> sep() {
			return getRuleContexts(SepContext.class);
		}
		public SepContext sep(int i) {
			return getRuleContext(SepContext.class,i);
		}
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public Term_modifierContext term_modifier() {
			return getRuleContext(Term_modifierContext.class,0);
		}
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public ClauseBasicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clauseBasic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterClauseBasic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitClauseBasic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitClauseBasic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseBasicContext clauseBasic() throws RecognitionException {
		ClauseBasicContext _localctx = new ClauseBasicContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clauseBasic);
		int _la;
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(100);
					sep();
					}
				}

				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS || _la==MINUS) {
					{
					setState(103);
					modifier();
					}
				}

				setState(106);
				match(LPAREN);
				setState(107);
				clauseDefault();
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(108);
					sep();
					}
				}

				setState(111);
				match(RPAREN);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CARAT || _la==TILDE) {
					{
					setState(112);
					term_modifier();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(115);
					sep();
					}
				}

				setState(118);
				atom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public Multi_valueContext multi_value() {
			return getRuleContext(Multi_valueContext.class,0);
		}
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public Term_modifierContext term_modifier() {
			return getRuleContext(Term_modifierContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atom);
		int _la;
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS || _la==MINUS) {
					{
					setState(121);
					modifier();
					}
				}

				setState(124);
				field();
				setState(125);
				multi_value();
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CARAT || _la==TILDE) {
					{
					setState(126);
					term_modifier();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS || _la==MINUS) {
					{
					setState(129);
					modifier();
					}
				}

				setState(133);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(132);
					field();
					}
					break;
				}
				setState(135);
				value();
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CARAT || _la==TILDE) {
					{
					setState(136);
					term_modifier();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TerminalNode TERM_NORMAL() { return getToken(QueryStringParser.TERM_NORMAL, 0); }
		public TerminalNode COLON() { return getToken(QueryStringParser.COLON, 0); }
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(TERM_NORMAL);
			setState(142);
			match(COLON);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(143);
				sep();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public Range_termContext range_term() {
			return getRuleContext(Range_termContext.class,0);
		}
		public NormalContext normal() {
			return getRuleContext(NormalContext.class,0);
		}
		public TruncatedContext truncated() {
			return getRuleContext(TruncatedContext.class,0);
		}
		public QuotedContext quoted() {
			return getRuleContext(QuotedContext.class,0);
		}
		public Quoted_truncatedContext quoted_truncated() {
			return getRuleContext(Quoted_truncatedContext.class,0);
		}
		public TerminalNode QMARK() { return getToken(QueryStringParser.QMARK, 0); }
		public AnythingContext anything() {
			return getRuleContext(AnythingContext.class,0);
		}
		public TerminalNode STAR() { return getToken(QueryStringParser.STAR, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_value);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				range_term();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				normal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				truncated();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				quoted();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(150);
				quoted_truncated();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				match(QMARK);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(152);
				anything();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				match(STAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnythingContext extends ParserRuleContext {
		public List<TerminalNode> STAR() { return getTokens(QueryStringParser.STAR); }
		public TerminalNode STAR(int i) {
			return getToken(QueryStringParser.STAR, i);
		}
		public TerminalNode COLON() { return getToken(QueryStringParser.COLON, 0); }
		public AnythingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anything; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterAnything(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitAnything(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitAnything(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnythingContext anything() throws RecognitionException {
		AnythingContext _localctx = new AnythingContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_anything);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(STAR);
			setState(157);
			match(COLON);
			setState(158);
			match(STAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Two_sided_range_termContext extends ParserRuleContext {
		public Token start_type;
		public Range_valueContext a;
		public Range_valueContext b;
		public Token end_type;
		public TerminalNode LBRACK() { return getToken(QueryStringParser.LBRACK, 0); }
		public TerminalNode LCURLY() { return getToken(QueryStringParser.LCURLY, 0); }
		public TerminalNode RBRACK() { return getToken(QueryStringParser.RBRACK, 0); }
		public TerminalNode RCURLY() { return getToken(QueryStringParser.RCURLY, 0); }
		public List<SepContext> sep() {
			return getRuleContexts(SepContext.class);
		}
		public SepContext sep(int i) {
			return getRuleContext(SepContext.class,i);
		}
		public List<Range_valueContext> range_value() {
			return getRuleContexts(Range_valueContext.class);
		}
		public Range_valueContext range_value(int i) {
			return getRuleContext(Range_valueContext.class,i);
		}
		public TerminalNode TO() { return getToken(QueryStringParser.TO, 0); }
		public Two_sided_range_termContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_two_sided_range_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).enterTwo_sided_range_term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryStringParserListener ) ((QueryStringParserListener)listener).exitTwo_sided_range_term(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QueryStringParserVisitor ) return ((QueryStringParserVisitor<? extends T>)visitor).visitTwo_sided_range_term(this);
			else return visitor.visitChildren(this);
		}
	}
